# foody-backend

./: README.md  dockerfile  pyproject.toml
benz_scraper/: db.py  models.py  restaurents_web.py  scrape_restaurents.py  utils.py
benz_scraper/scrapers/: base_scraper.py  restaurants_scraper.py  restaurents_scraper.py  reviews_scraper.py
migrations/models/: 0_20240131121828_init.py  1_20240131133105_extend-length.py
